Fixes for newer JDKs